Fix css to fix off-center svg icon

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -13,17 +13,22 @@ body {
 .search-component__input {
   flex-grow: 1;
   font-size: 1rem;
+  padding: 0 1rem;
 }
 
 .search-component__button {
+  padding: 0;
   flex-grow: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .search-component__input,
 .search-component__button {
   border: none;
   background-color: #fff;
-  padding: 1.25rem 1rem;;
+  width: 60px;
 }
 
 @media (max-width: 480px) {
